tests/func/parsing/error_reporting/test_parsing_errors_premature_end.err
1:6: syntax error: unexpected end of file
    1 | id+id*
      |       ^^^ expected: ( id